--- a/ts-shell/index.html
+++ b/ts-shell/index.html
@@ -6,7 +6,13 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sample</title>
-</head>
+  <script>
+    var ENV_FLAGS = {
+
+      // shaderFile:"geometry"
+      shaderFile:"book-of-shader-1"
+    }
+  </script></head>
 
 <body>
   <div id="root"></div>
